@@ -6,6 +6,7 @@ Changes in 2.8.4
 - errors if No courses assigned to teacher or No Students were found in GradebookBreakdown.php
 - add All Courses & Course-specific comments scales/codes tipmessage in FinalGrades.php & InputFinalGrades.php
 - add help for non-core modules in Help.php & Bottom.php
+- Remove exit/die/eval in functions, thanks to PHP Mess Detector
 
 Changes in 2.8.3
 ----------------
